Bug 108820 - Footnote number removed, but grey highlight not removed in repeated table heading (comment 7)
Summary: Footnote number removed, but grey highlight not removed in repeated table hea...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:7.1.0 target:25.2.0
Keywords:
Depends on:
Blocks: Writer-Tables Footnote-Endnote
  Show dependency treegraph
 
Reported: 2017-06-27 16:55 UTC by Daniel Grigoras
Modified: 2024-11-25 16:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document demonstrating the footnote number table heading issue (17.71 KB, application/vnd.oasis.opendocument.text)
2017-06-28 06:35 UTC, Daniel Grigoras
Details
Screenshot demonstrating footnote number table heading issue (122.00 KB, image/png)
2017-07-03 09:14 UTC, Daniel Grigoras
Details
FootnoteInHeader.odt: simple and clear example (12.10 KB, application/vnd.oasis.opendocument.text)
2020-07-25 10:29 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Grigoras 2017-06-27 16:55:23 UTC
Description:
Footnote number fields inserted in a table heading are not displayed in the subsequent reiterations of the table heading for tables that stretch over more than one page and that have their heading repeated on each new page.

Steps to Reproduce:
-

Actual Results:  
-

Expected Results:
-


Reproducible: Always

User Profile Reset: No

Additional Info:
-


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 vihsa 2017-06-28 01:19:48 UTC
Hello Daniel Grigoras,

Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it.
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 Daniel Grigoras 2017-06-28 06:35:30 UTC
Created attachment 134338 [details]
Sample document demonstrating the footnote number table heading issue
Comment 3 Dieter 2017-07-02 16:13:58 UTC
I can't confirm it. I tried to reproduce it with LO 5.4.0.1:
1. Open a new document
2. Insert a table with a heading and 50 rows
3. Type a text of the heading => text appears also on the second side.
4. Insert a footnote to the heading => footnote only appears on the first side.

I did a second try:
1. Open a new document
2. Insert a table with a heading 20 rows
3. Insert a text to the heading
4. Insert a footnot to the heading
5. Add some rows => heading appears also on the second side but again without a footnote.

I can't assess whether this is also a bug, but it is a different different from the behaviour described in this bug report.
Comment 4 Daniel Grigoras 2017-07-03 09:13:02 UTC
(In reply to Dieter Praas from comment #3)

Not sure why you had to produce a new document when I had attached a sample.
Anyway, I'll attach a screenshot with this issue using LibreOffice 5.4.0.1.
Comment 5 Daniel Grigoras 2017-07-03 09:14:48 UTC
Created attachment 134444 [details]
Screenshot demonstrating footnote number table heading issue
Comment 6 Dieter 2017-07-03 09:41:36 UTC
(In reply to Daniel Grigoras from comment #4)
> (In reply to Dieter Praas from comment #3)
> 
> Not sure why you had to produce a new document when I had attached a sample.
> Anyway, I'll attach a screenshot with this issue using LibreOffice 5.4.0.1.

I'm sorry. I've opened your document, but I thought, there was a footnote number in the heading and the problem was, that the footnote itself wasn't displayed. Sorry for the confusion.

So I can confirm the behaviour you describe, but I'm still not sure that this is a bug. I see more disadvantages, if the footnote is repeated in every heading.

So I added the keyword needsUXEval. So I hope that someone else can assess, whether this is a bug or not.
Comment 7 Yousuf Philips (jay) (retired) 2017-07-03 19:56:04 UTC
Looks like a bug to me as the footnote grey highlight does appear in the repeated table header and the footnote appears in both places in Word 2010. So lets set to NEW for the time being.

But in Word 2010, the comment that was added to repeated table header also appears in the original table header, so not sure how independent each repeated table header should be. So lets ask some expert.

Regina, Cor, Stuart: What is your take?

(In reply to Dieter Praas from comment #6)
> So I added the keyword needsUXEval. So I hope that someone else can assess,
> whether this is a bug or not.

Only adding the keyword wont get Heiko to notice, as you need to also add the ux-advise email to the CC list as well. Luckily you added a meta bug, which is how i noticed. :D
Comment 8 Cor Nouws 2017-08-11 15:25:10 UTC
a minor bug, IMO
Comment 9 Justin L 2018-03-22 12:48:21 UTC
Inherited from OOo. Initial code import of sw/source/core/layout/ftnfrm.cxx has a function IsFootnoteAllowed with the comment "no footnotes in repeated headlines".

Since the absence of the footnote number itself is intentional, I'm changing the bug title to be about the gray box needs to be removed also. I'm interested in being shown how to remove the gray block so that it can also be used for bug 54393.
Comment 10 QA Administrators 2019-03-23 03:17:56 UTC Comment hidden (obsolete)
Comment 11 Dieter 2019-03-23 05:34:38 UTC
Still present in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 12 Justin L 2020-07-25 10:11:49 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/99423
Comment 13 Justin L 2020-07-25 10:29:09 UTC
Created attachment 163514 [details]
FootnoteInHeader.odt: simple and clear example
Comment 14 Commit Notification 2020-07-27 17:48:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9054c903b215892198f54f105947b16544a78f01

tdf#108820 sw layout: no ftn fieldshading in repeated header

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Justin L 2020-07-27 18:07:28 UTC
Well, I kindof hijacked the bug based on comment 7, and said the bug is only that the footnote was COMPLETELY removed from the following pages. It certainly was very intentionally removed, so I am now marking it as "fixed" since the field shading is now also gone.

If anyone disagrees with my assessment, they can re-open the bug.
Comment 16 Dieter 2020-08-13 18:41:15 UTC
Field shading has been gone in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

=> VERIFIED FIXED
Comment 17 Commit Notification 2024-11-25 16:32:12 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8431865e6b4d006f9df34663c4d81e76cccbda44

tdf#108820 tdf#158713 sw layout: no footnote in repeated table rows

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.