tdf#108820 sw layout: no ftn fieldshading in repeated header

IsFootnoteAllowed() removes the footnote marker from
the repeated table headers, but it didn't remove the
view menu -> field shadings background.

NewExtraPortion() is the only function that calls
NewFootnotePortion(), and it will create a blank
FieldPortion is nullptr is returned, so return a
null FoonotePortion instead so that we can test
for is-footnote and then prevent the drawing
of the fieldshadings.

FieldShading is an on-screen item only and never printed,
so no unit test is possible.

Change-Id: I940eaf2dc3f4ad808b333d46f0964df31a9345b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99423
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>
Reviewed-by: Justin Luth <justin_luth@sil.org>